blog ready without styling

--- a/python_django/templates/base_layout.html
+++ b/python_django/templates/base_layout.html
@@ -12,12 +12,20 @@
     <h1><a href="{% url 'articles:list' %}">Link All Articles</a></h1>
     <nav>
         <ul>
-            <li>
-                <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit">Logout</button>
-                </form>
-            </li>
+            {% if user.is_authenticated %}
+                <li>
+                    <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>
+                <li>
+                    <a href="{% url 'articles:create' %}">Create new Article</a>
+                </li>
+            {% else %}
+                <li><a href="{% url 'accounts:login' %}">Login</a></li>
+                <li><a href="{% url 'accounts:signup' %}">Register</a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
