--- a/python_django/articles/templates/articles/article_detail.html
+++ b/python_django/articles/templates/articles/article_detail.html
@@ -9,6 +9,7 @@
             <h2>{{ article.title }} </h2>
             <p>{{ article.body }}</p>
             <p>{{ article.date }}</p>
+            <h3>Written by {{ article.author.username }}</h3>
         </div>
     </div>
 {% endblock %}
