--- a/python_django/articles/templates/articles/article_create.html
+++ b/python_django/articles/templates/articles/article_create.html
@@ -1,12 +1,59 @@
 {% extends 'base_layout.html' %}
 
+
 {% block content %}
+<!--
     <div class="create-article">
         <h2>Create an Awesome new Article </h2>
-    <form class = "site-form" action="{% url 'articles:create' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Create">
-    </form>
+        <form class="site-form" action="{#% url 'articles:create' %#}" method="post" enctype="multipart/form-data">
+            {#% csrf_token %#}
+            {#  #}{ form }}
+            <input type="submit" value="Create">
+        </form>
     </div>
+-->
+
+
+    <div class="container body-content span=8 offset=2">
+    <div class="well">
+        <form class="form-horizontal" action="{% url 'articles:create' %}" method="POST" enctype="multipart/form-data">
+            <fieldset>
+                <legend>New Post</legend>
+
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="id_title">Post Title</label>
+                    <div class="col-sm-4 ">
+                        <input type="text" class="form-control" id="id_title" placeholder="Post Title"
+                               name="title">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="id_slug">Slug</label>
+                    <div class="col-sm-4 ">
+                        <input type="text" class="form-control" id="id_slug" placeholder="Post Slug"
+                               name="slug">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="if_body">Content</label>
+                    <div class="col-sm-6">
+                        <textarea class="form-control" rows="6" id="id_body"
+                                  name="body"></textarea>
+                    </div>
+                </div>
+                {% csrf_token %}
+                <div class="form-group">
+                    <div class="col-sm-4 col-sm-offset-4">
+                        <a class="btn btn-default" href="{%  url 'articles:list' %}">Cancel</a>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
+
+
 {% endblock %}
