--- a/python_django/assets/css/style.css
+++ b/python_django/assets/css/style.css
@@ -7056,3 +7056,7 @@ article .author  {
 article .author  {
   content: '\2014 \00A0';
 }
+.logout-button {
+  border: none !important;
+  background: none !important;
+}
