--- a/python_django/accounts/templates/accounts/login.html
+++ b/python_django/accounts/templates/accounts/login.html
@@ -1,10 +1,36 @@
 {% extends 'base_layout.html' %}
 
+
 {% block content %}
-    <h1>Log in</h1>
-    <form class="site-form" action="{% url 'accounts:login' %}" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Log In">
-    </form>
+
+    <div class="container body-content span=8 offset=2">
+        <div class="well">
+            <form class="form-horizontal" action="{% url 'accounts:login' %}" method="post">
+                <fieldset>
+                    <legend>Login</legend>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="id_username">Username</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="id_username" placeholder="Username" name="username">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="id_password">Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" class="form-control" id="id_password" placeholder="Password" name="password">
+                        </div>
+                    </div>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <div class="col-sm-4 col-sm-offset-4">
+                            <a class="btn btn-default" href="{% url 'articles:list' %}">Cancel</a>
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+
 {% endblock %}
