--- a/python_django/accounts/templates/accounts/signup.html
+++ b/python_django/accounts/templates/accounts/signup.html
@@ -1,11 +1,41 @@
 {% extends 'base_layout.html' %}
 
 {% block content %}
-    <h1>Signup</h1>
-    <form class="site-form" action="/accounts/signup/" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Sign Up">
 
-    </form>
+    <div class="container body-content span=8 offset=2">
+        <div class="well">
+            <form class="form-horizontal" action="/accounts/signup/" method="post">
+                <fieldset>
+                    <legend>Register</legend>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="id_username">Username</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="id_username" placeholder="Username" name="username" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="id_password1">Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" class="form-control" id="id_password1" placeholder="Password" name="password1" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="id_password2">Confirm Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" class="form-control" id="id_password2" placeholder="Password" name="password2" required>
+                        </div>
+                    </div>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <div class="col-sm-4 col-sm-offset-4">
+                            <a class="btn btn-default" href="{% url 'articles:list' %}">Cancel</a>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
